task_2/nc/deploy-nc-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        resorces:
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
     name: nginx
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: nginx
